<resources>
    <string name="app_name">Learn 2 Earn</string>
    <string name="authenticating">Authenticating…</string>
    <string name="auth_fail">Authentication failed, please try again</string>
    <string name="sign_out">Sign Out</string>

    <string name="choose_role_student">Student</string>
    <string name="choose_role_parent">Parent</string>
    <string name="choose_role_teacher">Teacher</string>
    <string name="choose_role_title">Are you a student, a parent, or a teacher?</string>
    <string name="choose_role_next">Next</string>

    <string name="home_no_parent">You must connect with a parent to create bets</string>
    <string name="home_no_bets">You have no active bets</string>
    <string name="home_no_assignments">You have no assignments</string>
    <string name="home_no_students">You have no students</string>
    <string name="home_active_bets_toolbar_title">Active Bets</string>
    <string name="home_assignments_toolbar_title">Assignments</string>
    <string name="home_create_bet">Create Bet</string>
    <string name="home_create_assignment">Create Assignment</string>
    <string name="home_current_balance">Current Balance: %1$s ETH</string>
    <string name="home_update_current_balance">Update Balance</string>
    <string name="home_minimum_grade">Minimum Grade: %1$d%%</string>
    <string name="home_bet_being_confirmed">The bet is being confirmed, this may take up to a minute</string>

    <string name="teacher_home_set_grade">Set Grade</string>
    <string name="teacher_home_set_grade_description">Enter this student\'s grade for %1$s</string>
    <string name="teacher_home_submit_grades">Submit Grades</string>

    <string name="student_home_add_teacher">Add Teacher</string>
    <string name="student_home_add_parent">Add Parent</string>
    <string name="student_home_no_assignments_toast">You have no assignments to bet on</string>
    <string name="student_home_bet_being_created">Your bet is being created, this may take up to a minute</string>

    <string name="add_parent_description">Please enter your parent\'s email address</string>
    <string name="add_parent_submit">Submit</string>

    <string name="add_teacher_description">Please enter your teacher\'s email address</string>
    <string name="add_teacher_submit">Submit</string>

    <string name="create_bet_create">Create</string>
    <string name="create_assignment_create">Create</string>
</resources>
