<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akrama.learn2earn.chooseaccountrole.ChooseAccountRoleActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/choose_role_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:gravity="center"
            />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <RadioButton
                android:id="@+id/choose_role_student_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_role_student"
                android:padding="10dp"
                android:tag="0"
                />
            <RadioButton
                android:id="@+id/choose_role_parent_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_role_parent"
                android:padding="10dp"
                android:tag="1"
                />
            <RadioButton
                android:id="@+id/choose_role_teacher_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_role_teacher"
                android:padding="10dp"
                android:tag="2"
                />

        </RadioGroup>

        <Button
            android:id="@+id/choose_role_next_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/choose_role_next"
            android:enabled="false"
            style="@style/Widget.AppCompat.Button.Colored"
            />

    </LinearLayout>

</FrameLayout>
